Fix to overflow styling

--- a/src/targets/meandall/styles/scaffolding/base.less
+++ b/src/targets/meandall/styles/scaffolding/base.less
@@ -5,12 +5,12 @@
 
 body {
   padding-top: @header-height !important;
-  overflow-x:hidden;
+  overflow-x:initial;
 }
 
 #main-container {
   background: @c-black;
-  overflow-x:hidden;
+  overflow-x:initial;
 }
 
 main {
